--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="book.png">
 </head>
 
 <body>
