changed website title

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div class="bgimg-1">
     <div class="caption">
-      <span class="border">Samira's Digital Portfolio</span>
+      <span class="border">Samira's Portfolio</span>
     </div>
   </div>
 
