--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div class="bgimg-2">
     <div class="caption">
-      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">WLLN</span>
+      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">WLLN</span>
     </div>
   </div>
 
@@ -55,7 +55,7 @@
 
   <div class="bgimg-3">
     <div class="caption">
-      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">Rhetorical
+      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">Rhetorical
         Analysis</span>
     </div>
   </div>
@@ -67,9 +67,9 @@
     </div>
   </div>
 
-  <div class="bgimg-3">
+  <div class="bgimg-4">
     <div class="caption">
-      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">Research Essay</span>
+      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">Research Essay</span>
     </div>
   </div>
 
