--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,51 @@
     </div>
   </nav>
 
+  <br />
+  <div class="container contact-form">
+    <h1 style="font-size: 2rem;">
+      Hello, there!
+    </h1>
+    <h2 style="font-size: 1rem;font-family: 'Josefin Slab', serif;">
+      If you have comments or questions for about my writing, fill out the form below.
+    </h2>
+  </div>
+
+  <br/>
+
+  <form name="contact" method="POST" data-netlify="true">
+    <div class="container">
+      <div class="form-group">
+        <label style="font-family: 'Josefin Slab', serif;">Name</label>
+        <input
+          type="text"
+          name="name"
+          class="form-control"
+          placeholder="John Doe"
+        />
+      </div>
+      <div class="form-group">
+        <label style="font-size: 1rem;font-family: 'Josefin Slab', serif;">Email Address</label>
+        <input
+          type="email"
+          name="email"
+          class="form-control"
+          placeholder="name@example.com"
+        />
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1" style="font-size: 1rem;font-family: 'Josefin Slab', serif;">Comments</label>
+        <textarea
+          class="form-control"
+          name="message"
+          id="exampleFormControlTextarea1"
+          rows="3"
+        ></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary" style="font-size: 1rem;font-family: 'Josefin Slab', serif;">Submit</button>
+    </div>
+  </form>
+
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
