--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
 
   <form name="contact" method="POST" data-netlify="true">
     <div class="container">
-      <div class="form-group">
-        <label style="font-family: 'Josefin Slab', serif;">Name</label>
+      <div class="form-group" style="font-family: 'Josefin Slab', serif;">
+        <label>Name</label>
         <input
           type="text"
           name="name"
@@ -50,8 +50,8 @@
           placeholder="John Doe"
         />
       </div>
-      <div class="form-group">
-        <label style="font-size: 1rem;font-family: 'Josefin Slab', serif;">Email Address</label>
+      <div class="form-group" style="font-family: 'Josefin Slab', serif;">
+        <label>Email Address</label>
         <input
           type="email"
           name="email"
@@ -59,8 +59,8 @@
           placeholder="name@example.com"
         />
       </div>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1" style="font-size: 1rem;font-family: 'Josefin Slab', serif;">Comments</label>
+      <div class="form-group" style="font-family: 'Josefin Slab', serif;">
+        <label for="exampleFormControlTextarea1">Comments</label>
         <textarea
           class="form-control"
           name="message"
