--- a/contact.html
+++ b/contact.html
@@ -33,42 +33,28 @@
       Hello, there!
     </h1>
     <h2 style="font-size: 1rem;font-family: 'Josefin Slab', serif;">
-      If you have comments or questions for about my writing, fill out the form below.
+      If you have any comments or questions about my writing, fill out the form below.
     </h2>
   </div>
 
-  <br/>
+  <br />
 
   <form name="contact" method="POST" data-netlify="true">
     <div class="container">
       <div class="form-group" style="font-family: 'Josefin Slab', serif;">
         <label>Name</label>
-        <input
-          type="text"
-          name="name"
-          class="form-control"
-          placeholder="John Doe"
-        />
+        <input type="text" name="name" class="form-control" placeholder="John Doe" />
       </div>
       <div class="form-group" style="font-family: 'Josefin Slab', serif;">
         <label>Email Address</label>
-        <input
-          type="email"
-          name="email"
-          class="form-control"
-          placeholder="name@example.com"
-        />
+        <input type="email" name="email" class="form-control" placeholder="name@example.com" />
       </div>
       <div class="form-group" style="font-family: 'Josefin Slab', serif;">
         <label for="exampleFormControlTextarea1">Comments</label>
-        <textarea
-          class="form-control"
-          name="message"
-          id="exampleFormControlTextarea1"
-          rows="3"
-        ></textarea>
+        <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
-      <button type="submit" class="btn btn-primary" style="font-size: 1rem;font-family: 'Josefin Slab', serif;">Submit</button>
+      <button type="submit" class="btn btn-primary"
+        style="font-size: 1rem;font-family: 'Josefin Slab', serif;">Submit</button>
     </div>
   </form>
 
