--- a/essays.html
+++ b/essays.html
@@ -27,7 +27,166 @@
     </div>
   </nav>
 
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100"
+          src="https://images.unsplash.com/photo-1587838289432-0a12ae664619?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=967&q=80"
+          style="height: 500px; width:100%;" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100"
+          src="https://images.unsplash.com/photo-1526638684360-95cdcee762ce?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1060&q=80"
+          style="height: 500px; width:100%;" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100"
+          src="https://images.unsplash.com/photo-1529522210435-26cb9e92a33d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80"
+          style="height: 500px; width:100%;" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
+  <br /><br />
+
+
+  <div class="container" style="text-align: center;">
+    <a class="btn btn-outline-secondary" href="#self" role="button">Self-Assessment</a>
+    <a class="btn btn-outline-secondary" href="#wlln" role="button">WLLN</a>
+    <a class="btn btn-outline-secondary" href="#rhetorical" role="button">Rhetorical Anaylsis</a>
+    <a class="btn btn-outline-secondary" href="#research" role="button">Research</a>
+  </div>
+
+
+  <br /><br />
+  <div class="container" id="self">
+    <div class="row">
+      <div class="col">
+        <h2>Self-Assessment Essay</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque magna ac orci dictum hendrerit.
+          Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
+          Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
+          pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
+          Quisque scelerisque tellus nec nisl pulvinar porta. Pellentesque consectetur tristique nunc, vehicula
+          tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
+          facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
+          at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
+          tincidunt. Ut cursus venenatis sem eu facilisis.</p>
+      </div>
+      <div class="col">
+        <img
+          src="https://images.unsplash.com/photo-1451226428352-cf66bf8a0317?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1053&q=80"
+          width="500" />
+      </div>
+    </div>
+  </div>
+
+  <br /><br />
+  <div class="container">
+    <hr />
+  </div>
+
+  <br /><br />
+  <div class="container" id="wlln">
+    <div class="row">
+      <div class="col">
+        <img
+          src="https://images.unsplash.com/reserve/uZYSV4nuQeyq64azfVIn_15130980706_64134efc6e_o.jpg?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1047&q=80"
+          width="500" />
+      </div>
+      <div class="col">
+        <h2>Writing Language and Literacy Narrative</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque magna ac orci dictum hendrerit.
+          Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
+          Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
+          pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
+          Quisque scelerisque tellus nec nisl pulvinar porta. Pellentesque consectetur tristique nunc, vehicula
+          tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
+          facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
+          at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
+          tincidunt. Ut cursus venenatis sem eu facilisis.</p>
+      </div>
+    </div>
+  </div>
+
+  <br /><br />
+  <div class="container">
+    <hr />
+  </div>
+
+  <br /><br />
+  <div class="container" id="rhetorical">
+    <div class="row">
+      <div class="col">
+        <h2>Rhetorical Anaylsis Essay</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque magna ac orci dictum hendrerit.
+          Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
+          Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
+          pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
+          Quisque scelerisque tellus nec nisl pulvinar porta. Pellentesque consectetur tristique nunc, vehicula
+          tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
+          facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
+          at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
+          tincidunt. Ut cursus venenatis sem eu facilisis.</p>
+      </div>
+      <div class="col">
+        <img
+          src="https://images.unsplash.com/photo-1506957833838-96c1e88d394f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1052&q=80"
+          width="500" />
+      </div>
+    </div>
+  </div>
+
+  <br /><br />
+  <div class="container">
+    <hr />
+  </div>
+
+  <br /><br />
+  <div class="container" id="research">
+    <div class="row">
+      <div class="col">
+        <img
+          src="https://images.unsplash.com/photo-1517770413964-df8ca61194a6?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80"
+          width="500" />
+      </div>
+      <div class="col">
+        <h2>Research Essay</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque magna ac orci dictum hendrerit.
+          Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
+          Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
+          pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
+          Quisque scelerisque tellus nec nisl pulvinar porta. Pellentesque consectetur tristique nunc, vehicula
+          tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
+          facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
+          at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
+          tincidunt. Ut cursus venenatis sem eu facilisis.</p>
+      </div>
+    </div>
+  </div>
+
+
+
+  <br /><br />
+
+  <div class="container">
+    <p style="text-align: center;">&#169; Samira</p>
+  </div>
+
+  <br />
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
