minor stylistic changes

--- a/essays.html
+++ b/essays.html
@@ -76,7 +76,8 @@
     <div class="row">
       <div class="col">
         <h2>Self-Assessment Essay</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque magna ac orci dictum hendrerit.
+        <p style="font-family: 'Zilla Slab', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+          scelerisque magna ac orci dictum hendrerit.
           Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
           Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
           pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
@@ -89,7 +90,7 @@
       <div class="col">
         <img
           src="https://images.unsplash.com/photo-1451226428352-cf66bf8a0317?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1053&q=80"
-          width="500" />
+          width="500" style="opacity: 0.8;" />
       </div>
     </div>
   </div>
@@ -105,11 +106,12 @@
       <div class="col">
         <img
           src="https://images.unsplash.com/reserve/uZYSV4nuQeyq64azfVIn_15130980706_64134efc6e_o.jpg?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1047&q=80"
-          width="500" />
+          width="500" style="opacity: 0.8;" />
       </div>
       <div class="col">
         <h2>Writing Language and Literacy Narrative</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque magna ac orci dictum hendrerit.
+        <p style="font-family: 'Zilla Slab', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+          scelerisque magna ac orci dictum hendrerit.
           Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
           Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
           pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
@@ -132,7 +134,8 @@
     <div class="row">
       <div class="col">
         <h2>Rhetorical Anaylsis Essay</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque magna ac orci dictum hendrerit.
+        <p style="font-family: 'Zilla Slab', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+          scelerisque magna ac orci dictum hendrerit.
           Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
           Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
           pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
@@ -145,7 +148,7 @@
       <div class="col">
         <img
           src="https://images.unsplash.com/photo-1506957833838-96c1e88d394f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1052&q=80"
-          width="500" />
+          width="500" style="opacity: 0.8;" />
       </div>
     </div>
   </div>
@@ -161,11 +164,12 @@
       <div class="col">
         <img
           src="https://images.unsplash.com/photo-1517770413964-df8ca61194a6?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80"
-          width="500" />
+          width="500" style="opacity: 0.8;" />
       </div>
       <div class="col">
         <h2>Research Essay</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque magna ac orci dictum hendrerit.
+        <p style="font-family: 'Zilla Slab', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+          scelerisque magna ac orci dictum hendrerit.
           Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
           Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
           pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
