added simple footer

--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,14 @@
     </div>
   </form>
 
+  <br /><br />
+
+  <div class="container">
+    <p style="text-align: center;">&#169; Samira</p>
+  </div>
+
+  <br />
+
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
