--- a/index.html
+++ b/index.html
@@ -34,16 +34,20 @@
   </div>
 
   <div style="background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-    <h3 style="text-align:center;">Welcome!</h3>
-    <div class="container">
-      <p>On this website, I will display my work from ENGL 110.</p>
+    <h3 style="text-align:center;">Welcome!</h3><br />
+    <div class="container" style="font-family: 'Zilla Slab', serif;">
+      <p>On this website, I will display my work from ENGL 110. This will include the following core writing essays I
+        worked on during this fall semester: Self-Assessement Essay, Writing Language and Literacy Narrative, Rhetorical
+        Analysis Essay, and Research Essay. I have grown a lot as a semester over the course of this semester. I hope
+        you see the same improvement in my writing as well. Enjoy!</p>
     </div>
 
   </div>
 
   <div class="bgimg-2">
     <div class="caption">
-      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">WLLN</span>
+      <span class="border"
+        style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">WLLN</span>
     </div>
   </div>
 
@@ -55,7 +59,8 @@
 
   <div class="bgimg-3">
     <div class="caption">
-      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">Rhetorical
+      <span class="border"
+        style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">Rhetorical
         Analysis</span>
     </div>
   </div>
@@ -69,7 +74,9 @@
 
   <div class="bgimg-4">
     <div class="caption">
-      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">Research Essay</span>
+      <span class="border"
+        style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">Research
+        Essay</span>
     </div>
   </div>
 
