added back to top button

--- a/essays.html
+++ b/essays.html
@@ -10,7 +10,7 @@
   <title>Samira's Portfolio</title>
 </head>
 
-<body>
+<body id="top">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a href="index.html"><img src="book.png" width="40" /></a>
@@ -182,6 +182,10 @@
     </div>
   </div>
 
+  <br />
+  <div class="container" style="text-align: center;">
+    <a class="btn btn-outline-secondary" href="#top" role="button">Back to Top</a>
+  </div>
 
 
   <br /><br />
