minor change to description

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
     <h3 style="text-align:center;">Welcome!</h3><br />
     <div class="container" style="font-family: 'Zilla Slab', serif;">
       <p>On this website, I will display my work from ENGL 110. This will include the following core writing essays I
-        worked on during this fall semester: Self-Assessement Essay, Writing Language and Literacy Narrative, Rhetorical
-        Analysis Essay, and Research Essay. I have grown a lot as a semester over the course of this semester. I hope
+        worked on during this fall semester: the Self-Assessement Essay, Writing Language and Literacy Narrative,
+        Rhetorical
+        Analysis Essay, and the Research Essay. I have grown a lot as a writer over the course of this semester. I
+        hope
         you see the same improvement in my writing as well. Enjoy!</p>
     </div>
 
