--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div style="background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
     <h3 style="text-align:center;">Welcome!</h3><br />
-    <div class="container" style="font-family: 'Zilla Slab', serif;">
+    <div class="container" style="font-family: 'Zilla Slab', serif;text-align:center;">
       <p>On this website, I will display my work from ENGL 110. This will include the following core writing essays I
         worked on during this fall semester: the Self-Assessement Essay, Writing Language and Literacy Narrative,
         Rhetorical
