--- a/essays.html
+++ b/essays.html
@@ -85,7 +85,7 @@
           tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
           facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
           at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
-          tincidunt. Ut cursus venenatis sem eu facilisis.</p>
+          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="self.html">Read More...</a></p>
       </div>
       <div class="col">
         <img
@@ -119,7 +119,7 @@
           tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
           facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
           at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
-          tincidunt. Ut cursus venenatis sem eu facilisis.</p>
+          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="wlln.html">Read More...</a></p>
       </div>
     </div>
   </div>
@@ -143,7 +143,7 @@
           tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
           facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
           at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
-          tincidunt. Ut cursus venenatis sem eu facilisis.</p>
+          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="rhetorical.html">Read More...</a></p>
       </div>
       <div class="col">
         <img
@@ -177,7 +177,7 @@
           tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
           facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
           at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
-          tincidunt. Ut cursus venenatis sem eu facilisis.</p>
+          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="reserach.html">Read More...</a></p>
       </div>
     </div>
   </div>
