fixed broken link

--- a/essays.html
+++ b/essays.html
@@ -177,7 +177,7 @@
           tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
           facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
           at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
-          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="reserach.html">Read More...</a></p>
+          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="research.html">Read More...</a></p>
       </div>
     </div>
   </div>
