added essay links

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
   <div class="bgimg-2">
     <div class="caption">
       <span class="border"
-        style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">WLLN</span>
+        style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;"><a
+          href="wlln.html" style="color:white;">WLLN</a></span>
     </div>
   </div>
 
@@ -62,8 +63,8 @@
   <div class="bgimg-3">
     <div class="caption">
       <span class="border"
-        style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">Rhetorical
-        Analysis</span>
+        style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;"><a
+          href="rhetorical.html" style="color:white;">Rhetorical Analysis</a></span>
     </div>
   </div>
 
@@ -77,8 +78,8 @@
   <div class="bgimg-4">
     <div class="caption">
       <span class="border"
-        style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;">Research
-        Essay</span>
+        style="background-color:transparent;font-size:25px;color: #f7f7f7;text-shadow: 5px 5px darkgrey;"><a
+          href="research.html" style="color:white;">Research</a></span>
     </div>
   </div>
 
