--- a/essays.html
+++ b/essays.html
@@ -21,7 +21,18 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link active" href="#">Essays <span class="sr-only">(current)</span></a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Essays
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="self.html">Self-Assessment</a>
+            <a class="dropdown-item" href="wlln.html">WLLN</a>
+            <a class="dropdown-item" href="rhetorical.html">Rhetorical Analysis</a>
+            <a class="dropdown-item" href="research.html">Research</a>
+          </div>
+        </li>
         <a class="nav-link" href="contact.html">Contact</a>
       </div>
     </div>
