--- a/rhetorical.html
+++ b/rhetorical.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
   <br />
-  <div class="container">
+  <div class="container" style="font-family: 'Zilla Slab', serif;">
     <div style="text-align: center;">
       <p>
         <button class="btn btn-outline-secondary" type="button" data-toggle="collapse" data-target="#cover"
