--- a/research.html
+++ b/research.html
@@ -90,6 +90,7 @@
       <div class="collapse" id="second">
         <div class="card card-body" style="text-align:left">
           <h1 style="text-align:center">Second Draft</h1>
+          <h3 style="text-align:center"><u>Xenophobia in America: Rooted from the Beginning</u></h3>
           In March 2020, when Covid-19 began to rapidly spread in the United States, xenophobia against Asian Americans
           began to escalate. From the SARs outbreak in 2002 to the Ebola virus in 2014, one group or another has been
           targeted. What is at the root of this problem? Human rights lawyer, and activist Láolú Senbanjo, in his
@@ -281,6 +282,7 @@
       <div class="collapse" id="final">
         <div class="card card-body" style="text-align:left">
           <h1 style="text-align:center">Final Draft</h1>
+          <h3 style="text-align:center"><u>Xenophobia in America: Rooted from the Beginning</u></h3>
           <div class="container">
             <div class="row">
               <div class="col-8">
