--- a/rhetorical.html
+++ b/rhetorical.html
@@ -84,46 +84,60 @@
       <div class="collapse" id="second">
         <div class="card card-body" style="text-align:left">
           <h1 style="text-align:center">Second Draft</h1>
-          In “Mother Tongue,” a personal essay published in The Threepenny Review in 1990, Amy Tan, best-selling author
+          <h3 style="text-align:center"><u>“Mother Tongue”: An Exploration of Language</u></h3>
+          In “Mother Tongue,” a personal essay published in The Threepenny Review in 1990, Amy Tan, best-selling
+          author
           of The Joy Luck Club and Two Kinds, addresses the notion that her mother’s English is somehow “broken” or
           “limited.” Tan effectively utilizes excellent personal examples and anecdotes to support her argument. She
           makes use of all the rhetorical appeals of logos, ethos, and pathos. But she shines the most when she
-          illustrates her relationship with her mother, and demonstrates how she uses language to communicate with her.
+          illustrates her relationship with her mother, and demonstrates how she uses language to communicate with
+          her.
           In illustrating simple, yet important scenarios, she educates her readers about the importance of not only
           accepting, but embracing all of their “Englishes.”
           <br /><br />
-          One feature of the text that stands out to the readers is Tan’s relationship with her mother. The majority of
+          One feature of the text that stands out to the readers is Tan’s relationship with her mother. The majority
+          of
           us, especially immigrants, have a complicated, yet important relationship with our mothers. They are our
           heroes and supporters. Thus, it is powerful when Tan demonstrates that she utilizes one of her Englishes to
-          communicate with her mother. By making her mother the heart of her essay and utilizing pathos, she is able to
+          communicate with her mother. By making her mother the heart of her essay and utilizing pathos, she is able
+          to
           obtain the sympathy and support of her readers. In the text, she concludes that language connects her to her
           mother by providing an anecdote of how she naturally switches her English. The author claims that, “It has
-          become our language of intimacy, a different sort of English that relates to family talk, the language I grew
+          become our language of intimacy, a different sort of English that relates to family talk, the language I
+          grew
           up with.” Tan demonstrates the importance of language by providing this simple, yet impactful scenario that
           emphasizes her core argument that all “Englishes” should be accepted. By demonstrating the significance of
           language in her relationship with her mother, she justifies the importance of embracing her “Englishes.”
           <br /><br />
           In her essay, Tan also examines how she utilizes her “Englishes” to help her mother communicate with others.
-          For example, she mentions that when she was younger, she used to pretend to be her mother on the phone so that
+          For example, she mentions that when she was younger, she used to pretend to be her mother on the phone so
+          that
           her mother would be taken seriously. She even illustrates a humorous instance when she says that once she
           spoke on the phone with the stockbroker, pretending to be her mother, only for the stockbroker to find out
           that it was her all along. Tan illustrates that the stockbroker was wrong not to take her mother seriously
           because of how she spoke by satirizing her conversation with him. In addition to utilizing humor to support
           her argument, Tan provides serious and even life-threatening examples. Tan challenges the stigma of “broken”
-          English by presenting the example of her mother at the hospital. After the hospital lost her mother’s CAT scan
+          English by presenting the example of her mother at the hospital. After the hospital lost her mother’s CAT
+          scan
           revealing possible brain tumors, they failed to apologize and help find the scan. But as soon as Tan herself
           talked to the hospital in her “perfect” English, they immediately resolved the issue, promising to find the
-          scan. By providing this powerful example, Tan is demonstrating the consequences of neglecting someone because
+          scan. By providing this powerful example, Tan is demonstrating the consequences of neglecting someone
+          because
           of the English they speak. She is emphasizing that societal rejection of English that does not follow the
-          strict set of rules that academics and scholars often enforce can cause great struggle for those who may speak
+          strict set of rules that academics and scholars often enforce can cause great struggle for those who may
+          speak
           other “Englishes.” Therefore, Tan intentionally incorporates the anecdote of the hospital to drive home her
           pleas to accept all the “Englishes,” not just standardized English.
           <br /><br />
           Throughout the course of the text, Tan likewise inserts ethos and logos to support her argument that all
-          “Englishes” should be accepted. For instance, she says that at a talk for her novel, she became more aware of
-          the English she speaks. Tan recognized that she was using “carefully wrought grammatical phrases” in front of
-          her mother. By acknowledging her own expertise in the English language and writing, she gains credibility with
-          her readers, and she proves her investment in the issue at hand. However, it is important to note that Tan is
+          “Englishes” should be accepted. For instance, she says that at a talk for her novel, she became more aware
+          of
+          the English she speaks. Tan recognized that she was using “carefully wrought grammatical phrases” in front
+          of
+          her mother. By acknowledging her own expertise in the English language and writing, she gains credibility
+          with
+          her readers, and she proves her investment in the issue at hand. However, it is important to note that Tan
+          is
           subtle about her background. She is aware of her audience and and thereby, purposefully doesn’t mention that
           she majored in English and Linguistics. In dong this, the author is avoiding coming off as aggressive or
           pretentious to her larger audience. Nonetheless, Tan demonstrates that she is prepared to talk about the
@@ -133,28 +147,36 @@
           “standard” or “perfect” English, it is hurting the future generation of writers and poets. She does this by
           delving into her own struggles with the English language, such as identifying analogies. Tan showcases the
           cons of expecting everyone to fully learn and understand the rigid form of English by displaying her own
-          struggles to the readers. Thus, in doing this, she is employing both pathos and logos to garner her audience’s
+          struggles to the readers. Thus, in doing this, she is employing both pathos and logos to garner her
+          audience’s
           attention.
           <br /><br />
-          Tan’s “Mother Tongue” is an essay that many immigrants can relate to. It’s an exploration of the relationship
+          Tan’s “Mother Tongue” is an essay that many immigrants can relate to. It’s an exploration of the
+          relationship
           immigrants have with language. We the readers can directly resonate with Tan’s stories. “Mother Tongue” is a
           great representation of what happens when an author takes it upon themselves to implement their own life
           stories and anecdotes to support their argument. Throughout the course of the essay, Tan uses examples from
           her own life, many of her mother, and many of her own encounters with standard English. Specifically, she
-          centers a majority of her essay on her mother, who speaks English that people often consider to be “broken” or
+          centers a majority of her essay on her mother, who speaks English that people often consider to be “broken”
+          or
           “limited.” Her personal anecdotes stand out to the audience, as they effectively portray the many points she
-          argues in her essay, and as they showcase how “standardized” English can negatively impact her and the people
+          argues in her essay, and as they showcase how “standardized” English can negatively impact her and the
+          people
           she loves. Through the application of pathos, ethos, logos, and her own personal examples and anecdotes, she
           convinces the audience that they should utilize all the “Englishes” that they have, that the “standardized”
-          English is not a reflection of “perfect” English, and that her mother tongue is actually “perfectly natural.”
+          English is not a reflection of “perfect” English, and that her mother tongue is actually “perfectly
+          natural.”
           Therefore, Tan successfully proves her argument, and leaves her readers thinking about the many “Englishes”
           they should embrace.
+
         </div>
       </div>
 
       <div class="collapse" id="final">
         <div class="card card-body" style="text-align:left">
           <h1 style="text-align:center">Final Draft</h1>
+          <h3 style="text-align:center"><u>“Mother Tongue”: An Exploration of Language</u>
+          </h3>
           In “Mother Tongue,” a personal essay published in The Threepenny Review in 1990, Amy Tan, best-selling author
           of The Joy Luck Club and Two Kinds, addresses the notion that her mother’s English is somehow “broken” or
           “limited.” The 1990s were a time of great immigration, and intense xenophobia, so Tan’s argument was (it still
