minor text adjustment

--- a/research.html
+++ b/research.html
@@ -103,7 +103,7 @@
           feel some sense of control and assurance. Though xenophobia has always existed throughout American history, it
           has dramatically increased during Trump’s presidency and the current pandemic.
           <br /><br />
-          <div class="container">
+          <div>
             <div class="row">
               <div class="col-8">
                 The response to Covid-19 is not the first time that xenophobia rose due to a major virus or disease. For
@@ -283,7 +283,7 @@
         <div class="card card-body" style="text-align:left">
           <h1 style="text-align:center">Final Draft</h1>
           <h3 style="text-align:center"><u>Xenophobia in America: Rooted from the Beginning</u></h3>
-          <div class="container">
+          <div>
             <div class="row">
               <div class="col-8">
                 Edward Said’s 1978 book, “Orientalism” explores the need of the Western world to look down upon the
@@ -346,7 +346,7 @@
           Whenever times get tough or scary, Americans find a group to blame, a group to see as the “other.” Thus, the
           response to Covid-19 in terms of xenophobia is not a shocking one.
           <br /><br />
-          <div class="container">
+          <div>
             <div class="row">
               <div class="col-4">
                 <img src="table.png" width="350">
