--- a/essays.html
+++ b/essays.html
@@ -87,16 +87,11 @@
     <div class="row">
       <div class="col">
         <h2>Self-Assessment Essay</h2>
-        <p style="font-family: 'Zilla Slab', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
-          scelerisque magna ac orci dictum hendrerit.
-          Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
-          Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
-          pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
-          Quisque scelerisque tellus nec nisl pulvinar porta. Pellentesque consectetur tristique nunc, vehicula
-          tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
-          facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
-          at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
-          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="self.html">Read More...</a></p>
+        <p style="font-family: 'Zilla Slab', serif;">During the first three phases of English 110, I obtained many
+          valuable insights into myself as a writer. In writing the three core assignments for each phase, I learned to
+          become more aware of my own skills and flaws as a writer. I might not have perfected every skill or course
+          learning objective, but I know that I definitely improved, and most importantly, I started to find my voice as
+          a writer. <a href="self.html">Read More...</a></p>
       </div>
       <div class="col">
         <img
@@ -121,16 +116,10 @@
       </div>
       <div class="col">
         <h2>Writing Language and Literacy Narrative</h2>
-        <p style="font-family: 'Zilla Slab', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
-          scelerisque magna ac orci dictum hendrerit.
-          Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
-          Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
-          pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
-          Quisque scelerisque tellus nec nisl pulvinar porta. Pellentesque consectetur tristique nunc, vehicula
-          tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
-          facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
-          at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
-          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="wlln.html">Read More...</a></p>
+        <p style="font-family: 'Zilla Slab', serif;">I wish I had known how much I would regret it. It was 11AM and I
+          was standing on line for the teacher to check homework. Sweat started slowly rolling down the right side of my
+          face. My heart began to beat faster. I tried to keep my hands from shaking. <a href="wlln.html">Read
+            More...</a></p>
       </div>
     </div>
   </div>
@@ -145,16 +134,16 @@
     <div class="row">
       <div class="col">
         <h2>Rhetorical Anaylsis Essay</h2>
-        <p style="font-family: 'Zilla Slab', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
-          scelerisque magna ac orci dictum hendrerit.
-          Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
-          Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
-          pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
-          Quisque scelerisque tellus nec nisl pulvinar porta. Pellentesque consectetur tristique nunc, vehicula
-          tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
-          facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
-          at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
-          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="rhetorical.html">Read More...</a></p>
+        <p style="font-family: 'Zilla Slab', serif;">In “Mother Tongue,” a personal essay published in The Threepenny
+          Review in 1990, Amy Tan, best-selling author of The Joy Luck Club and Two Kinds, addresses the notion that her
+          mother’s English is somehow “broken” or “limited.” The 1990s were a time of great immigration, and intense
+          xenophobia, so Tan’s argument was (it still is) especially relevant and pivotal. Tan effectively utilizes
+          excellent personal examples and anecdotes to support her argument. She makes use of all the rhetorical appeals
+          of logos, ethos, and pathos. But she shines the most when she illustrates her relationship with her mother,
+          and demonstrates how she uses language to communicate with her. In illustrating simple, yet important
+          scenarios, she educates her intended audience, academics and scholars, who are often skeptics about
+          non-standardized English, about the importance of not only accepting, but embracing all forms of “Englishes.”
+          <a href="rhetorical.html">Read More...</a></p>
       </div>
       <div class="col">
         <img
@@ -179,16 +168,17 @@
       </div>
       <div class="col">
         <h2>Research Essay</h2>
-        <p style="font-family: 'Zilla Slab', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
-          scelerisque magna ac orci dictum hendrerit.
-          Vivamus pulvinar vehicula varius. Suspendisse at cursus lacus. Nam sit amet erat eu ante ultricies fermentum.
-          Aenean facilisis mauris augue, nec convallis est venenatis in. Sed a fringilla ligula. Vivamus id est luctus,
-          pharetra dui quis, interdum enim. Morbi bibendum nulla non sapien tempus, ac faucibus lorem pellentesque.
-          Quisque scelerisque tellus nec nisl pulvinar porta. Pellentesque consectetur tristique nunc, vehicula
-          tincidunt velit vehicula ut. Morbi tempus non lectus sed rutrum. Pellentesque ullamcorper laoreet ante, quis
-          facilisis orci elementum ac. Phasellus tempor egestas mauris, malesuada placerat mauris tincidunt quis. Mauris
-          at risus nec tellus commodo luctus ut eget ex. Nulla pharetra tortor eu turpis facilisis, vitae convallis nisi
-          tincidunt. Ut cursus venenatis sem eu facilisis. <a href="research.html">Read More...</a></p>
+        <p style="font-family: 'Zilla Slab', serif;">Edward Said’s 1978 book, “Orientalism” explores the need of the
+          Western world to look down upon the East, especially Asian and Arab countries. “Orientalism” delves into how
+          the White man, represented by the West, views the East as “violent” and “monstrous,” among other negative
+          portrayals. While the West sees the East as “inferior,” it considers itself “superior.” In March 2020, when
+          Covid-19 began to rapidly spread in the United States, xenophobia against Asian Americans began to escalate.
+          From the SARs outbreak in 2002 to the Ebola virus in 2014, one group or another has been targeted. What is at
+          the root of this problem? Human rights lawyer, and activist Láolú Senbanjo, in his opinion piece, “A Virus
+          Doesn’t Care Where You’re From,” (2020) published in The New York Times, addresses this issue and supplies
+          prior examples of xenophobia’s connection to viruses and diseases. He asserts that disease simply targets
+          every human body equally, rather than a specific, ethnic body like the Chinese or African body. <a
+            href="research.html">Read More...</a></p>
       </div>
     </div>
   </div>
